--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required( VERSION 3.21 )
 
+set( CMAKE_CXX_STANDARD 17 )
+set( CMAKE_CXX_STANDARD_REQUIRED TRUE )
+
 set( MAZEGEN_LIBRARY mazegen )
 option( MAZEGEN_BUILD_EXAMPLES "Build the examples for this project" OFF )
 
